# omniSell

./: .gitignore  Makefile  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  worker.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  health.py  projects.py  system_settings.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  init_db.py  models.py  session.py
backend/app/schemas/: auth.py  common.py  project.py  system_settings.py
backend/app/services/: ai_analysis.py  media_tools.py  project_tasks.py  system_settings.py  video_generation.py  video_pipeline.py  video_sources.py
backend/app/tasks/: __init__.py  analysis_tasks.py  project_remake_tasks.py  project_tasks.py  queue.py  remake_tasks.py  state.py
backend/app/workflows/: __init__.py  analysis_workflow.py  base.py  create_workflow.py  project_workflows.py  registry.py  remake_project_workflow.py  remake_workflow.py
backend/migrations/: add_ai_analysis_column.sql  add_remake_audio_inputs.sql  add_remake_visual_analysis_columns.sql  add_system_ai_settings.sql
backend/tests/: test_api.py  test_project_worker.py  test_video_pipeline.py
frontend/: components.json  nuxt.config.ts  package-lock.json  package.json
frontend/composables/: useAuth.ts  useChatStore.ts  useOmniSellApi.ts  useTheme.ts
frontend/i18n/: i18n.config.ts
frontend/internal/: nuxt-paths.mjs
frontend/layouts/: console.vue
frontend/locales/: en.json  ja.json  tw.json  zh.json
sql/: omni-sell.sql
(+29 files in other folders)
