[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnisell-backend"
version = "0.1.0"
description = "Backend starter for an AI-powered ecommerce system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<1.0",
    "faster-whisper>=1.1,<2.0",
    "openai>=0.27,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "pymysql>=1.1,<2.0",
    "python-multipart>=0.0.9,<1.0",
    "python-dotenv>=1.0,<2.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.2,<9.0",
    "ruff>=0.5,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.packages.find]
include = ["app*"]
